# zero2prod

./: Cargo.toml  Dockerfile  doc.txt
configurations/: base.yaml  local.yaml  production.yaml
migrations/: 20250625110012_make_status_not_null_in_subscriptions.sql  20250625111042_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.html
tests/: health_check.rs  health_checker.rs
tests/api/: health_check.rs  helpers.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
