[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
base64 = "0.21"
tracing-bunyan-formatter = "0.3"
sha3 = "0.9"
argon2 = { version = "0.4", features = ["std"] }
tracing-log = "0.1"
tracing-actix-web = "0.7"
env_logger = "0.9"
thiserror = "1"
anyhow = "1"
config = "0.13"
actix-web = "4"
unicode-segmentation = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
log = "0.4.27"
serde = { version = "1", features = ["derive"]}
serde-aux = "4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
secrecy = { version = "0.8", features = ["serde"] }
validator = "0.16"
rand = { version = "0.8", features=["std_rng"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
once_cell = "1"
reqwest = "0.11"
claims = "0.7"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"
serde_json = "1"
linkify = "0.9"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]